--- a/transforms/swinging.html
+++ b/transforms/swinging.html
@@ -18,8 +18,6 @@
 <body onload=glStart();>
 
 <canvas id=canvas1 data-render=gl width=400 height=400 tabindex="1"></canvas>
-<canvas id=canvas2 data-render=gl width=400 height=400 tabindex="1"></canvas>
-<canvas id=canvas3 data-render=gl width=400 height=400 tabindex="1"></canvas>
 
 <script id=fs_phong type=x-shader/x-fragment>
     uniform float p[10];
@@ -54,9 +52,7 @@
     }
 </script>
 
-
-<script src="swinging.js"></script>
-<script src="flower-1.js"></script>
-<script src="flower-2.js"></script>
+<script src="swinging.js">
+</script>
 
 </body>
