--- a/transforms/grab.html
+++ b/transforms/grab.html
@@ -22,9 +22,7 @@
 </head>
 <body onload=glStart();>
 
-<div class="canvas-reel"><canvas id=canvas1 data-render=gl width=400 height=400 tabindex="1"></canvas></div>
-<div class="canvas-reel"><canvas id=canvas2 data-render=gl width=400 height=400 tabindex="1"></canvas></div>
-<div class="canvas-reel"><canvas id=canvas3 data-render=gl width=400 height=400 tabindex="1"></canvas></div>
+<div class="canvas-reel"><canvas id=canvasFinger data-render=gl width=400 height=400 tabindex="1"></canvas></div>
 
 <script id=fs_phong type=x-shader/x-fragment>
     uniform float p[10];
@@ -59,9 +57,6 @@
     }
 </script>
 
-
-<script src="swinging.js"></script>
-<script src="flower-1.js"></script>
-<script src="flower-2.js"></script>
+<script src="grab.js"></script>
 
 </body>
