--- a/transforms/grab.html
+++ b/transforms/grab.html
@@ -23,6 +23,7 @@
 <body onload=glStart();>
 
 <div class="canvas-reel"><canvas id=canvasFinger data-render=gl width=400 height=400 tabindex="1"></canvas></div>
+<div class="canvas-reel"><canvas id=canvasArm    data-render=gl width=400 height=400 tabindex="1"></canvas></div>
 
 <script id=fs_phong type=x-shader/x-fragment>
     uniform float p[10];
@@ -58,5 +59,6 @@
 </script>
 
 <script src="grab.js"></script>
+<script src="grab2.js"></script>
 
 </body>
