--- a/particles/index.html
+++ b/particles/index.html
@@ -1,10 +1,9 @@
 <head>
+  <script src=data-structures.js></script>
   <script src=gl.js></script>
   <script src=vecs.js></script>
-  <script src=models.js></script>
-  <script src=matrix-stack.js></script>
-  <script src=segments.js></script>
   <script src=globals.js></script>
+  <script src=models.js></script>
   <style>
   body {
     max-width: 60em;
@@ -28,20 +27,11 @@
 <body onload=glStart();>
 
 <div class="canvas-reel">
-  <h3 class=canvas-title>Two Link Inverse Kinematics</h3>
-  <canvas id=twolinkCanvas data-render=gl width=400 height=400 tabindex="1"></canvas>
-  <p>The yellow orb moves freely. The palm is positioned to match it, then elevated above it by slight rotation at the elbow. Then, the rotation at the wrist is suppressed as fingers close which contributes to the illusion that the hand id guiding the orb until it can be caught.</p>
-</div>
-
-<div class="canvas-reel">
-  <h3 class=canvas-title>N-Link Inverse Kinematics</h3>
-  <canvas id=nlinkCanvas data-render=gl width=400 height=400 tabindex="1"></canvas>
-  <p>Click the mouse on the canvas to see the true head of the chain which attempts to catch the target.</p>
-  <p>Strength of adjustment at each joint is modulated with time, so the arm lags behind and then catches up to the target.</p>
+  <canvas id=CanvasParticles data-render=gl width=400 height=400 tabindex="1"></canvas>
 </div>
 
 <script id=fs_phong type=x-shader/x-fragment>
-    uniform float p[10];
+    uniform float p[11];
     uniform vec3 lDir;
     varying vec3 vNormal;
 
@@ -69,7 +59,8 @@
 
        // APPLY GAMMA CORRECTION
 
-       gl_FragColor = vec4(pow(c.x,0.45),pow(c.y,0.45),pow(c.z,0.45),1.);
+       vec3 color = vec3(pow(c.x,0.45),pow(c.y,0.45),pow(c.z,0.45)) * p[10];
+       gl_FragColor = vec4(color, 1.);
     }
 </script>
 
@@ -91,7 +82,6 @@
    }
 </script>
 
-<script src=2link.js></script>
-<script src=nlink.js></script>
+<script src=particles.js></script>
 
 </body>
